make_stage_list: fix fov out of well
FOVs in a well will now be wrapped and centered

--- a/inst/rmarkdown/templates/rmd_template.cellid/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/rmd_template.cellid/skeleton/skeleton.Rmd
@@ -103,6 +103,8 @@ which can finally be imported in to MetaMorph's MDA.
 
 ```{r}
 stage_coords <- make_stage_list('stage_positions.xlsx')
+
+stage_coords$positions_plot #|> plotly::ggplotly()
 ```
 
 # Usage guide
