--- a/inst/rmarkdown/templates/rmd_template.cellid/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/rmd_template.cellid/skeleton/skeleton.Rmd
@@ -103,8 +103,7 @@ which can finally be imported in to MetaMorph's MDA.
 
 ```{r}
 stage_coords <- template_path |> 
-  make_stage_list(af_offset_default = 3.5,
-                  calib_stg_list = TRUE)
+  make_stage_list(af_offset_default = 3.5)
 
 stage_coords$positions_plot #|> plotly::ggplotly()
 ```
